--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "redux-form": "^8.3.6",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
